ghc-6.2/hslibs/win32/Win32Window_stub_ffi.h

extern void* prim_getMessage(HWND arg1);
extern MSG * access_prim_getMessage_gc_res1(HsPtr);
extern int access_prim_getMessage_gc_failed(HsPtr);
extern void* access_prim_getMessage_gc_failstring(HsPtr);
extern void* prim_getMessage2(HWND arg1);
extern MSG * access_prim_getMessage2_gc_res1(HsPtr);
extern int access_prim_getMessage2_gc_res3(HsPtr);
extern int access_prim_getMessage2_gc_failed(HsPtr);
extern void* access_prim_getMessage2_gc_failstring(HsPtr);
extern void* prim_peekMessage(HWND arg1,UINT arg2,UINT arg3,UINT arg4);
extern MSG * access_prim_peekMessage_gc_res1(HsPtr);
extern int access_prim_peekMessage_gc_failed(HsPtr);
extern void* access_prim_peekMessage_gc_failstring(HsPtr);
extern BOOL prim_translateMessage(MSG * arg1);
extern void* prim_updateWindow(HWND arg1);
extern int access_prim_updateWindow_gc_failed(HsPtr);
extern void* access_prim_updateWindow_gc_failstring(HsPtr);
extern LONG prim_dispatchMessage(MSG * arg1);
extern LRESULT prim_sendMessage(HWND arg1,DWORD arg2,WPARAM arg3,LPARAM arg4);