ghc-6.2/hslibs/win32/Win32Window.hs


-- A NULL window requests messages for any window belonging to this thread.
-- a "success" value of 0 indicates that WM_QUIT was received
getMessage :: MbHWND -> IO LPMSG
getMessage arg1 =
  (case arg1 of {
      Nothing -> (return (nullHANDLE));
      (Just arg1) -> (return ((arg1)))
   }) >>= \ (arg1) ->
  prim_getMessage arg1
  >>= \ gc_result ->
  access_prim_getMessage_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_getMessage_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getMessage_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (gc_res1))
foreign import  ccall "Win32Window_stub_ffi.h prim_getMessage" prim_getMessage :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getMessage_gc_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getMessage_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getMessage_gc_failstring :: Addr -> IO (Addr)

getMessage2 :: MbHWND -> IO (LPMSG,Bool)
getMessage2 arg1 =
  (case arg1 of {
      Nothing -> (return (nullHANDLE));
      (Just arg1) -> (return ((arg1)))
   }) >>= \ (arg1) ->
  prim_getMessage2 arg1
  >>= \ gc_result ->
  access_prim_getMessage2_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_getMessage2_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_getMessage2_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getMessage2_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (unmarshall_bool_ gc_res3) >>= \ gc_res2 ->
       (return ((gc_res1,gc_res2)))
foreign import  ccall "Win32Window_stub_ffi.h prim_getMessage2" prim_getMessage2 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getMessage2_gc_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getMessage2_gc_res3 :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getMessage2_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getMessage2_gc_failstring :: Addr -> IO (Addr)

-- A NULL window requests messages for any window belonging to this thread.
-- Arguably the code block shouldn't be a 'safe' one, but it shouldn't really
-- hurt.
peekMessage :: MbHWND -> UINT -> UINT -> UINT -> IO LPMSG
peekMessage arg1 arg2 arg3 arg4 =
  (case arg1 of {
      Nothing -> (return (nullHANDLE));
      (Just arg1) -> (return ((arg1)))
   }) >>= \ (arg1) ->
  prim_peekMessage arg1 arg2 arg3 arg4
  >>= \ gc_result ->
  access_prim_peekMessage_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_peekMessage_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_peekMessage_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (gc_res1))
foreign import  ccall "Win32Window_stub_ffi.h prim_peekMessage" prim_peekMessage :: Addr -> Word32 -> Word32 -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_peekMessage_gc_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_peekMessage_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_peekMessage_gc_failstring :: Addr -> IO (Addr)

-- Note: youre not supposed to call this if youre using accelerators
translateMessage :: LPMSG -> IO BOOL
translateMessage arg1 =
  prim_translateMessage arg1
  >>= \  res1  ->
  (unmarshall_bool_ res1) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall "Win32Window_stub_ffi.h prim_translateMessage" prim_translateMessage :: Addr -> IO (Int)

updateWindow :: HWND -> IO ()
updateWindow arg1 =
  prim_updateWindow arg1
  >>= \ gc_result ->
  access_prim_updateWindow_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_updateWindow_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall "Win32Window_stub_ffi.h prim_updateWindow" prim_updateWindow :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_updateWindow_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_updateWindow_gc_failstring :: Addr -> IO (Addr)

-- Return value of DispatchMessage is usually ignored
dispatchMessage :: LPMSG -> IO LONG
dispatchMessage arg1 =
  prim_dispatchMessage arg1
  >>= \  res1  ->
  (return (res1))
foreign import  ccall "Win32Window_stub_ffi.h prim_dispatchMessage" prim_dispatchMessage :: Addr -> IO (Int32)

sendMessage :: HWND -> WindowMessage -> WPARAM -> LPARAM -> IO LRESULT
sendMessage arg1 arg2 arg3 arg4 =
  prim_sendMessage arg1 arg2 arg3 arg4
  >>= \  res1  ->
  (return (res1))
foreign import  ccall "Win32Window_stub_ffi.h prim_sendMessage" prim_sendMessage :: Addr -> Word32 -> Word32 -> Int32 -> IO (Int32)

----------------------------------------------------------------

-- ToDo: figure out reentrancy stuff
-- ToDo: catch error codes
--
-- ToDo: how to send HWND_BROADCAST to PostMessage
-- %fun PostMessage       :: MbHWND -> WindowMessage -> WPARAM -> LPARAM -> IO ()
-- %fun PostQuitMessage   :: Int -> IO ()
-- %fun PostThreadMessage :: DWORD -> WindowMessage -> WPARAM -> LPARAM -> IO ()
-- %fun InSendMessage     :: IO Bool

----------------------------------------------------------------
-- End
----------------------------------------------------------------
